# main_project

./: .gitattributes  .gitignore  .lintr  .renvignore  LICENSE  README.md  pyproject.toml  requirements.txt
450k/: sample_sheet.csv
PPI/: 1926Bio_pvalue_ttest.csv  GO_KEGG_PPI.csv  GO_KEGG_PPI說明文件.txt  PPI_NtoN.csv  protein_associate_num.csv
R-scripts/: GEOquery.R  GO_clustering.R  code.R  combined_matrix_symbols.csv  correlation_matrix.csv  env_setup.R  parse.R  pathway.R  test_utils.R  utils.R  volcano_plot.R
Statistics/: compare.py  corr.py  liquid_milk.py
Statistics_data/: breast_liquid_dbeta.csv  breast_milk_dbeta.csv  breast_train_tissue_dbeta.csv  group_1.csv  group_3.csv  group_4.csv  liquid_group_1.csv  liquid_group_2.csv  liquid_group_3.csv  liquid_group_4.csv  liquid_milk_group1.csv  liquid_milk_group2.csv  liquid_milk_group3.csv  liquid_milk_group4.csv  merge_dbeta.csv  milk_group_2.csv
archieve/: cal_cp_four_method.ipynb  cal_dBeta.ipynb  cal_dbeta_2.ipynb  cp_test.ipynb  david.ipynb  go_clustering.ipynb  test_rank_four_method.ipynb  val_cp.ipynb
breast/: training_param.json
config/: README.md  breast.json  breast.toml  breast_plan_A.toml  lung.json  lung.toml  lung_plan_A.toml  prostate.json  prostate.toml  prostate_plan_A.toml  rectal.toml  rectal_plan_A.toml  rectal_plan_A_smote.toml  stomach.json  stomach.toml  stomach_plan_A.toml
external_result/: BP.txt  CC.txt  GPL13534-11288.txt  GSE207998-GPL13534_series_matrix_exprs.csv  GSE207998-GPL21145_series_matrix_exprs.csv  MF.txt  TCGA.BRCA.sampleMap_BRCA_clinicalMatrix.csv  func_atto_table.txt  gene_results.json  logFC_pathway.csv  matchgene174_group_3Y10__OR2.txt  matchgene174_single_3Y10__OR2.txt  stage_test.csv  stage_train.csv
ml/: ml_RFE.ipynb  (+11 more)
(+1400 files in other folders)
